<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mrs_Potato</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="String_Register">Register</string>
    <string name="String_Login">Login</string>
    <string name="Title_Welcome">Welcome to Da Hood</string>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="String_onRegister">Register</string>
    <string name="String_Cancel">Cancel</string>
    <string name="String_Username">Username:</string>
    <string name="String_Password">Passwowrd</string>
    <string name="Title_Registration">Registration</string>
    <string name="title_activity_profile_">Profile_Activity</string>
    <string name="String_onLogin">Login</string>
    <string name="String_AddNewAccount">Add Account</string>
    <string name="title_activity_account_">Account_Activity</string>
    <string name="Title_Account">Account Info</string>
    <string name="String_AccountName">Account Name:</string>
    <string name="String_Balance">Balance:</string>
    <string name="String_Interest">Interest Rate:</string>
    <string name="String_AccountNumber">Account Number:</string>
    <string name="String_AccountDisplay">Display Name:</string>
    <string name="String_onAddAccount">Add Account</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="String_AddTransaction">Add Transaction</string>
    <string name="String_GenerateSpendingReport">Generate Spending Report</string>
    <string name="title_activity_transaction_">Transaction_Activity</string>
    <string name="Title_Transaction">Transaction</string>
    <string name="String_Category">"Category:"</string>
    <string name="String_Amount">Amount:</string>
    <string name="String_Deposit">Deposit</string>
    <string name="String_Withdraw">Withdraw</string>
    <string name="title_activity_spending_report_">SpendingReport_Activity</string>
    <string name="String_LogOut">X</string>

</resources>
